--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div class="slided-menu-wrap">
         <div class="slided-inner-content">
           <ul>
-            <li><a href="file:///G:/Workshop/Design%20&%20Wordpress/Current%20Project/Inprogress%20Projects/Almisk%20Travel/index.html">Home</a></li>
-            <li><a href="file:///G:/Workshop/Design%20&%20Wordpress/Current%20Project/Inprogress%20Projects/Almisk%20Travel/packages.html">Packages</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/packages.html">Packages</a></li>
             <li><a href="https://umrah-desde.com/">Umra -</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">contact</a></li>
