--- a/single-package.html
+++ b/single-package.html
@@ -61,13 +61,13 @@
           <ul>
             <li>
               <a
-                href="file:///G:/Workshop/Design%20&%20Wordpress/Current%20Project/Inprogress%20Projects/Almisk%20Travel/index.html"
+                href="/index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="file:///G:/Workshop/Design%20&%20Wordpress/Current%20Project/Inprogress%20Projects/Almisk%20Travel/packages.html"
+                href="/packages.html"
                 >Packages</a
               >
             </li>
