--- a/single-package.html
+++ b/single-package.html
@@ -61,13 +61,13 @@
           <ul>
             <li>
               <a
-                href="/index.html"
+                href="/"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="/packages.html"
+                href="/packages"
                 >Packages</a
               >
             </li>
