--- a/packages.html
+++ b/packages.html
@@ -59,8 +59,8 @@
       <div class="slided-menu-wrap">
         <div class="slided-inner-content">
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/packages.html">Packages</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/packages">Packages</a></li>
             <li><a href="https://umrah-desde.com/">Umra -</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">contact</a></li>
