--- a/packages.html
+++ b/packages.html
@@ -17,7 +17,7 @@
          ========================================================================================= -->
     <header>
       <nav>
-        <a href="#"> Almisk travels </a>
+        <a href="/"> Almisk travels </a>
         <div class="menu-button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
