--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          ========================================================================================= -->
     <header>
       <nav>
-        <a href="/"> Almisk travels </a>
+        <a href="https://hossam-sadek-0000.github.io/Almisk-travel/"> Almisk travels </a>
         <div class="menu-button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -59,8 +59,8 @@
       <div class="slided-menu-wrap">
         <div class="slided-inner-content">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/packages">Packages</a></li>
+            <li><a href="https://hossam-sadek-0000.github.io/Almisk-travel/">Home</a></li>
+            <li><a href="https://hossam-sadek-0000.github.io/Almisk-travel/packages">Packages</a></li>
             <li><a href="https://umrah-desde.com/">Umra -</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">contact</a></li>
