--- a/single-package.html
+++ b/single-package.html
@@ -17,7 +17,7 @@
          ========================================================================================= -->
     <header>
       <nav>
-        <a href="/"> Almisk travels </a>
+        <a href="https://hossam-sadek-0000.github.io/Almisk-travel/"> Almisk travels </a>
         <div class="menu-button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -61,13 +61,13 @@
           <ul>
             <li>
               <a
-                href="/"
+                href="https://hossam-sadek-0000.github.io/Almisk-travel/"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="/packages"
+                href="https://hossam-sadek-0000.github.io/Almisk-travel/packages"
                 >Packages</a
               >
             </li>
