--- a/index.html
+++ b/index.html
@@ -218,16 +218,11 @@
       </div>
 
       <div class="service-wrap">
-        <div class="service-description description-one">
+        <div class="service-description description-one text-center">
           <h4>Discover the list of service we offer in spain</h4>
         </div>
 
-        <div class="service-description description-two">
-          <h4>
-            Almisk travel is a travel agency offering services to all kind of
-            tourist
-          </h4>
-        </div>
+      
 
         <div class="services-cards-grid">
           <div class="service-slide">
