--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </svg>
         </div>
       </nav>
-      <div class="slided-menu-wrap">
+      <div class="slided-menu-wrap padding-system">
         <div class="slided-inner-content">
           <ul>
             <li><a href="https://hossam-sadek-0000.github.io/Almisk-travel/">Home</a></li>
